--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "private": true,
-  "packageManager": "pnpm@9.1.2",
   "scripts": {
     "dev:app": "uni -p app",
     "dev:app-android": "uni -p app-android",
@@ -60,7 +59,8 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-4010520240507001",
     "pinia": "^2.0.36",
     "vue": "^3.4.27",
-    "vue-i18n": "^9.13.1"
+    "vue-i18n": "^9.13.1",
+    "wot-design-uni": "^1.2.25"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
